	src/descriptors/groupcontrib.cpp, src/builder.cpp,
	src/forcefields/forcefieldmm2.cpp,
	src/forcefields/forcefielduff.cpp,
	src/forcefields/forcefieldmmff94.cpp,
	src/forcefields/forcefieldghemical.cpp, src/obconversion.cpp:
	Change locale before parsing files to use "C" numeric locale and
	reset it to the original state afterwards. Should solve PR#1785463.

2008-06-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/phmodel.cpp (OBPhModel::CorrectForPH): Fix PR#1835204. Allow
	SMILES to have pH-correction. (i.e., only check for automatic
	formal charges for molecules with dimension > 0).

	* src/formats/mdlformat.cpp: Add a check for EOF before reading,
	as suggested by Izhar.

	* src/formats/smilesformat.cpp: Add initial pass at "standard"
	SMILES labels.

	* Doxygen, include/*.h, src/*.cpp: Update doxygen documentation.

2008-06-07  Chris Morley

	* src/formats/fingerprintformat.cpp: correct folding error message
	and prevent description of bits when fingerprint is folded.
	
	* src/formats/smilesformat.cpp: change -xc to -xa (for atomclass)
	
	* windows-vc2005/OBFS/OBFS.vcproj,windows-vc2005/OpenBabelOBF.sln
	add dependency of OBCommon to Fastsearch project

2008-06-06  Chris Morley

	* src/formats/smilesformat.cpp: SMIFormat was being hidden because
	its constructor was being called again when its derived class
	CANSMIFormat was made. Now both derived from a base class with most
	of the functionality. 
	Modified Description() and made same for both.
	Removed DEFAULTFORMAT flag (MolFormat already is).
	
	* include/openbabel/mol.h: add back #include <float.h> which was
	somehow removed in the last commit and is need for Windows build.
	
	* windows-vc2005/OBCommonFormats/OBCommonFormats.vcproj: remove
	cansmilesformat.cpp
	
2008-06-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/phmodel.h, src/phmodel.cpp: Changes to OBPhModel, 
	use the	Henderson-Hasselbalch formula to determine protonation states.